# race-car-control-lab

./: .gitignore  .gitmodules  LICENSE  README.md
firmware/esp32/src/configuration/config-server/: CMakeLists.txt  config-server.cpp  configserver.html  steer-identification.cpp  version.cmake
firmware/esp32/src/control/control-loop/: CMakeLists.txt  bang-bang.cpp  control.cpp  drive-controllers.cpp
firmware/esp32/src/hardware/sensors/: CMakeLists.txt  adc.cpp  bmi088.cpp  lighthouse.cpp  wheel-encoder.cpp
firmware/esp32/src/main/: CMakeLists.txt  main.cpp
firmware/esp32/src/main/include/: configuration.h  main.hpp  pinout.h
firmware/src/communication/communication-layer/: CMakeLists.txt  communication-layer.c
firmware/src/communication/communication-layer/include/: communication-layer.h
firmware/src/configuration/config-server/: CMakeLists.txt  config-server.c  configserver.html  steer-identification.c  version.cmake
firmware/src/configuration/config-server/include/: config-server.h  steer-identification.h
firmware/src/control/control-loop/: CMakeLists.txt  bang-bang.c  control.c  drive-controllers.c  pid-steer.c  raw-steer-controller.c
firmware/src/control/control-loop/include/: bang-bang.h  control.h  pid-steer.h  raw-steer-controller.h
software/src/crs/commons/: CMakeLists.txt  package.xml
software/src/crs/commons/src/: casadi_utils.cpp  curvilinear_track_trajectory.cpp  dynamic_point_trajectory.cpp  filter.cpp  static_track_trajectory.cpp  trajectory.cpp
software/src/crs/commons/test/: casadi_utils_test.cpp  track_tests.cpp
software/src/crs/controls/control_commons/: CMakeLists.txt  package.xml
software/src/crs/estimators/common/: CMakeLists.txt  package.xml
software/src/crs/estimators/mh_estimator/: CMakeLists.txt  package.xml
software/src/crs/safety_framework/common/: CMakeLists.txt  package.xml
software/src/crs/sensor_models/custom_sensor_model_template/: CMakeLists.txt  package.xml
software/src/ros4crs/crs_msgs/: CMakeLists.txt
software/src/ros4crs/ros_controllers/: CMakeLists.txt  package.xml
software/src/ros4crs/ros_controllers/app/: controller_node.cpp
software/src/ros4crs/ros_controllers/cfg/: rocket_pid.cfg
software/src/ros4crs/ros_controllers/config/: joystick_controller.yaml  mpc_controller.yaml  rocket_controller.yaml
software/src/ros4crs/ros_controllers/launch/: default.launch  default_rocket.launch  default_rocket_standalone.launch  default_standalone.launch
software/src/ros4crs/ros_controllers/src/: component_registry.cpp  dynamic_config.cpp  ros_joystick_controller.cpp
software/src/ros4crs/ros_crs_utils/: CMakeLists.txt  package.xml
software/src/ros4crs/ros_crs_utils/src/: parameter_io.cpp  parameter_io_ff_fb.cpp  parameter_io_kalman.cpp  parameter_io_kinematic.cpp  parameter_io_kinematic_tracking_mpc.cpp  parameter_io_lowpass.cpp  parameter_io_mhe.cpp  parameter_io_mpc.cpp  parameter_io_pacejka.cpp  parameter_io_pacejka_mpc_safety.cpp  parameter_io_pacejka_mpcc.cpp  parameter_io_pacejka_tracking_mpc.cpp  parameter_io_pacejka_with_imu_bias.cpp  parameter_io_rocket.cpp  parameter_io_rocket_control_commons.cpp  parameter_io_rocket_position_pid.cpp  state_message_conversion_kinematic.cpp  state_message_conversion_pacejka.cpp  state_message_conversion_pacejka_with_imu_bias.cpp  state_message_conversion_rocket.cpp  trajectory_message_conversion.cpp
software/src/ros4crs/ros_estimators/: CMakeLists.txt  package.xml
software/src/ros4crs/ros_estimators/app/: ros_estimation_node.cpp
software/src/ros4crs/ros_estimators/config/: pacejka_car_ekf.yaml  pacejka_car_lowpass.yaml
software/src/ros4crs/ros_estimators/launch/: default.launch
software/src/ros4crs/ros_estimators/src/: component_registry.cpp  data_converter.cpp
software/src/ros4crs/ros_estimators/test/: pacejka_kalman_test.cpp  pacejka_kalman_test.launch
software/src/ros4crs/ros_lighthouse_calibration/: CMakeLists.txt  package.xml
software/src/ros4crs/ros_lighthouse_calibration/app/: calibration_node.cpp  lighthouse_calibration_node.cpp  solver_node.cpp
software/src/ros4crs/ros_lighthouse_calibration/config/: lighthouse_calibration.rviz  lighthouse_calibration.yaml
software/src/ros4crs/ros_lighthouse_calibration/include/: calibration_visualization.h  lighthouse_calibration.h  lighthouse_calibration_collector.h  lighthouse_calibration_io.h  lighthouse_calibration_solver.h  lighthouse_calibrator.h  ootx_decoder.h
software/src/ros4crs/ros_lighthouse_calibration/launch/: calibrate.launch  default.launch  lighthouse_calib.launch
software/src/ros4crs/ros_lighthouse_calibration/msg/: BasestationInfo.msg
software/src/ros4crs/ros_lighthouse_calibration/src/: calibration_visualization.cpp  lighthouse_calibration_collector.cpp  lighthouse_calibration_io.cpp  lighthouse_calibration_solver.cpp  lighthouse_calibrator.cpp  ootx_decoder.cpp
software/src/ros4crs/ros_lighthouse_calibration/srv/: Calibrate.srv
software/src/ros4crs/ros_mpc_autotuner/: CMakeLists.txt  package.xml  setup.py
software/src/ros4crs/ros_mpc_autotuner/config/: config.yaml  interfaces.yaml
software/src/ros4crs/ros_mpc_autotuner/launch/: autotuner.launch  deviation_penalty.launch
software/src/ros4crs/ros_mpc_autotuner/scripts/: main.py
software/src/ros4crs/ros_safety_framework/: CMakeLists.txt  package.xml
software/src/ros4crs/ros_safety_framework/app/: safety_filter_node.cpp
software/src/ros4crs/ros_safety_framework/config/: collision_avoidance.yaml
software/src/ros4crs/ros_safety_framework/launch/: default.launch
software/src/ros4crs/ros_safety_framework/src/: component_registry.cpp
software/src/ros4crs/ros_visualizer/rocket_visualizer/: CMakeLists.txt  package.xml
software/src/ros4crs/rospy_controllers/: CMakeLists.txt  package.xml  setup.py
software/src/ros4crs/rospy_controllers/app/: controller_node.py
software/src/ros4crs/rospy_controllers/config/: mpcc_controller_rospy.yaml
software/src/ros4crs/rospy_controllers/data/: .gitignore
software/src/ros4crs/rospy_controllers/launch/: default.launch
software/src/ros4crs/tools/clock_publisher/: README.md  (+3 more)
(+884 files in other folders)
