<?xml version="1.0"?>
<package format="2">
  <name>rospy_controllers</name>
  <version>0.0.1</version>
  <description>Simple Python interface to write controllers that are compatible with CRS </description>

  <author email="sabodmer@ethz.ch">Sabrina Bodmer</author>
  <maintainer email="sabodmer@ethz.ch">Sabrina Bodmer</maintainer>

  <license>BSD 2-Clause </license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>crs_msgs</depend>



  <export></export>
</package>
